--- a/src/style.css
+++ b/src/style.css
@@ -472,6 +472,7 @@ height: 100%;
 
 /* 탑 카테고리 네비게이션 메뉴 */
 .navigation{
+    width: calc(100% - 330px);
     border-bottom:unset !important;
     justify-content: center;
     align-items: center;
@@ -491,7 +492,7 @@ height: 100%;
 }
 .navigation li{
     height: 100%;
-    width: 140px;
+    width: 130px;
     color: #fff;
     font-size: 22px;
     display: flex !important;
@@ -895,13 +896,21 @@ line-height: 18px;
 .snavili{
     display: flex;
 }
-.triangle{
+/* 원 혹은 세모 */
+/* .triangle{
     width: 0px;
     height: 0px;
     margin-right: -30px;
     border-top: 30px solid transparent;
     border-left: 30px solid #4b6cb7;
     border-bottom: 30px solid transparent;
+} */
+.triangle{
+    width: 30px;
+    height: 60px;
+    margin-right: -30px;
+    border-radius: 0 30px 30px 0;
+    background-color: #4b6cb7;
 }
 .sort_navi>li>a{
     width: 100%;
