--- a/src/style.css
+++ b/src/style.css
@@ -220,7 +220,7 @@ height: 100%;
     width: 200px;
     border: none;
     border-radius: 0px;
-    border-bottom: 2px solid #0b255b;
+    border-bottom: 2px solid #4b6cb7;
     margin-right: 10px;
 }
 
@@ -244,13 +244,13 @@ height: 100%;
     width: calc(50% - 10px);
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #bbbbbb;
+    border-bottom: 1px solid #4b6cb7;
 }
 .cart_check_wrap:nth-child(1){
-    border-top: 1px solid #bbbbbb;
+    border-top: 1px solid #4b6cb7;
 }
 .cart_check_wrap:nth-child(2){
-    border-top: 1px solid #bbbbbb;
+    border-top: 1px solid #4b6cb7;
 }
 .cart_check_wrap .count_wrap{
     margin-right: 20px;
@@ -309,7 +309,7 @@ height: 100%;
 .footer_bg_line{
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid #0b255b;
+    border-bottom: 1px solid #4b6cb7;
 }
 .footer_main{
     display: flex;
@@ -355,7 +355,7 @@ height: 100%;
     top: 0;
     left:190px;
     height: 60px;
-    border-bottom: 1px solid #0b255b;
+    border-bottom: 1px solid #4b6cb7;
 }
 
 
@@ -440,19 +440,19 @@ height: 100%;
 .search_bar>.flex>input{
     height: 50px;
     border: none;
-    border-bottom: 3px solid #0b255b;
+    border-bottom: 3px solid #4b6cb7;
     background-color: unset;
     border-radius: 0px;
     margin-right: 20px;
 }
 .search_bar>.flex>input:focus{
-    border-color: #0b255b;
+    border-color: #4b6cb7;
     box-shadow:unset;
     border-inline-end-width: unset;
     outline: 0;
 }
 .search_bar>.flex>input:hover{
-    border-color: #0b255b;
+    border-color: #4b6cb7;
 }
 .search_bar>.flex>a{
     border: none;
@@ -686,7 +686,7 @@ color: #000;
 .grid2{
     padding: 10px;
     transition: all 0.5s ease-out;
-    border: 1px solid #c2c2c2;
+    border: 1px solid #4b6cb7;
     margin-bottom: 10px;
 }
 .grid3wrap{
@@ -719,7 +719,7 @@ color: #000;
     flex-direction: column;
     width: calc(16.5% - 8px);
     margin-right: 10px;
-    border: 1px solid #0b255b;
+    border: 1px solid #4b6cb7;
     transition: all 0.5s ease-out;
     margin-bottom: 10px;
 }
@@ -728,12 +728,12 @@ color: #000;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    border-top: 1px solid #0b255b;
+    border-top: 1px solid #4b6cb7;
     transition: all 0.5s ease-out;
     padding: 10px 0;
 }
 .productbox.grid3:last-child{
-    border-bottom: 1px solid #0b255b;
+    border-bottom: 1px solid #4b6cb7;
 }
 .grid3 .product_pic{
     width: 70px;
@@ -906,10 +906,10 @@ line-height: 18px;
 .sort_navi>li{
     cursor: pointer;
     /* background-color: #0b255b; */
-   border-bottom: 2px solid #676565;   
+   border-bottom: 2px solid #4b6cb7;   
 }
 .sort_navi>li:first-child{
-    border-top: 2px solid #676565;
+    border-top: 2px solid #4b6cb7;
 }
 .snavili{
     display: flex;
@@ -978,7 +978,7 @@ display: block;
     display: flex;
     justify-content: space-between;
     padding-bottom: 20px;
-    border-bottom: 1px solid #d9d9d9;
+    border-bottom: 1px solid #4b6cb7;
 }
 .valuenum{
     margin-left: 10px;
@@ -1012,7 +1012,7 @@ line-height: 16px;
     margin-inline-end : 2px;
 }
 .shop_d_t{
-    border-bottom: 1px solid #d9d9d9;
+    border-bottom: 1px solid #4b6cb7;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
@@ -1225,7 +1225,7 @@ margin-bottom: 10px;
 .search_com{
     width: 100%;
     height: 170px;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
     border-radius: 5px;
     background-color: #fff;
 }
@@ -1305,13 +1305,13 @@ margin-bottom: 10px;
     background-color: #F3F3F3;
     padding: 15px 0;
     
-    border-bottom: 1px solid #676565;
+    border-bottom: 1px solid #4b6cb7;
 }
 .cateArray>div{
     font-size: 13px;
     width: 20%;
     padding: 10px;
-    border-right: 1px solid #676565;
+    border-right: 1px solid #4b6cb7;
     cursor: pointer;
 }
 .pl10{
@@ -1501,8 +1501,8 @@ display: flex;
     line-height: 30px;
     text-align: center;
     height: 30px;
-    border-top: 1px solid #d9d9d9;
-    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #4b6cb7;
+    border-bottom: 1px solid #4b6cb7;
     padding: 0px 10px;
     font-weight: bold;
 }
@@ -1520,7 +1520,7 @@ display: flex;
 /* 검색 */
 .search_box{
     padding: 10px;
-    border: 1px solid #000;
+    border: 1px solid #4b6cb7;
     margin-bottom: 10px;
 }
 /* 로그인 페이지 */
@@ -1653,7 +1653,7 @@ width: calc(100% - 100px);
     display: none;
   }
 .recentwrap{
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
 }
 .recentbox{
     width: 70px;
@@ -1708,7 +1708,7 @@ width: calc(100% - 100px);
     height: 50px;
     font-size: 18px;
     padding: 5px 10px;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
     margin-bottom: 1px;
     display: flex;
     align-items: center;
@@ -1735,7 +1735,7 @@ width: calc(100% - 100px);
     padding: 10px 5px;
     background-color: #a1a1a1;
     width: 100%;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
     display: flex;
     justify-content: space-between;
     margin-bottom: 2px;
@@ -1753,7 +1753,7 @@ width: calc(100% - 100px);
     height: 50px;
     text-align: center;
     padding: 10px;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
 }
 .subcategorylist{
     display: flex;
@@ -1797,11 +1797,11 @@ width: 300px;
 .buybox{
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #a1a1a1;
+    border-bottom: 1px solid #4b6cb7;
     padding: 10px;
 }
 .buywrap .buybox:first-child{
-    border-top: 1px solid #a1a1a1;
+    border-top: 1px solid #4b6cb7;
 }
 .buydiv{
   
@@ -1810,7 +1810,7 @@ width: 300px;
 .buywrap{
     width: 100%;
     padding: 10px;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
     margin: 10px 0;
     border-radius: 20px;
 }
@@ -1820,7 +1820,7 @@ width: 300px;
 .smallT{
     width: 100%;
     padding: 5px 0;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #4b6cb7;
     font-size: 22px;
     font-weight: 900;
     margin-bottom: 10px;
@@ -1904,8 +1904,8 @@ width: 300px;
 } */
 .notice_title{
     padding: 15px 10px ;
-    border-bottom: 1px solid #a1a1a1;
-    border-top: 2px solid #000;
+    border-bottom: 1px solid #4b6cb7;
+    border-top: 2px solid #4b6cb7;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1926,7 +1926,7 @@ width: 300px;
 .mr{
 margin-right: 20px;
 padding-right: 20px;
-border-right: 1px solid #a1a1a1;
+border-right: 1px solid #4b6cb7;
 }
 .notice_title.sub{
     padding: 10px;
@@ -1973,12 +1973,12 @@ border-right: 1px solid #a1a1a1;
 .noticecon{
     padding: 10px;
     min-height: 400px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #4b6cb7;
 }
 .qnacon{
     padding: 10px;
     min-height: 200px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #4b6cb7;
     margin-bottom: 20px;
 }
 .astyle{
@@ -1989,7 +1989,7 @@ border-right: 1px solid #a1a1a1;
     padding: 5px;
     font-size: 14px;
     color: #000;
-    border: 1px solid #a1a1a1;
+    border: 1px solid #4b6cb7;
 }
 .mt{
     position: absolute;
@@ -2044,13 +2044,13 @@ border-right: 1px solid #a1a1a1;
 .nextdiv{
     display: flex;
     padding: 15px 0;
-    border-bottom: 1px solid #a1a1a1;
+    border-bottom: 1px solid #4b6cb7;
     color: #000;
 }
 .nextdiv_t{
     margin-right: 20px;
     padding-right: 20px;
-    border-right: 1px solid #a1a1a1;
+    border-right: 1px solid #4b6cb7;
 }
 .nextdiv_c{
     color: #000;
@@ -2237,7 +2237,7 @@ color: #000;
 .conT{
     font-size: 20px;
     font-weight: 900;
-    border-bottom: 1px solid #a1a1a1;
+    border-bottom: 1px solid #4b6cb7;
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
@@ -2272,7 +2272,7 @@ color: #000;
     margin-top: 20px;
 }
 .tablediv{
-    border-bottom: 1px solid #676565;
+    border-bottom: 1px solid #4b6cb7;
 }
 .tableT{
     width: 150px;
@@ -2296,7 +2296,7 @@ color: #000;
 }
 .subtitle{
     font-size: 1.4em;
-    border-bottom: 1px solid #ded4c8;
+    border-bottom: 1px solid #4b6cb7;
     padding-bottom: 5px;
     font-weight: bold;
     padding-top: 30px;
@@ -2320,16 +2320,16 @@ color: #000;
 .inntertab:first-child>span{
     width: 100% ;
     display: block;
-    border-right: 1px solid #676565;
+    border-right: 1px solid #4b6cb7;
 }
 .innerdiv{
    width: 100%;
    justify-content: center;
    padding: 10px;
-   border-bottom: 1px solid #676565;
+   border-bottom: 1px solid #4b6cb7;
 }
 .inntertab.clicked{
-border-bottom: 3px solid #0b255b;
+border-bottom: 3px solid #4b6cb7;
 }
 .wrapT{
     width: 120px;
@@ -2458,13 +2458,13 @@ border-bottom: 3px solid #0b255b;
     }
     .sort_navi>li{
         flex : 1;
-        border-left: 1px solid #a1a1a1;
-        border-top: 1px solid #a1a1a1;
-        border-bottom: 1px solid #a1a1a1;
+        border-left: 1px solid #4b6cb7;
+        border-top: 1px solid #4b6cb7;
+        border-bottom: 1px solid #4b6cb7;
         border-right: unset;
     }
     .sort_navi>li:last-child{
-        border-right: 1px solid #a1a1a1;;
+        border-right: 1px solid #4b6cb7;;
     }
  .sort_navi>li>a{
     padding: 5px;
